# update_opencore

./: README.md  test_efi.py  update_translations.py
 Projeto-Original-Update_Opencore/: Original-main.py  drivers.py  efi.py  environment.py  logger.py  validate.py
.github/workflows/: python-app.yml
FuncinalTeste Codigo modular/: environment.py  logger.py
FuncinalTeste Codigo modular /translations/: en.json  fr.json
FuncionalTeste Codigo modular/: backup.py  cleanup.py  efi.py  fallback_to_key.py  main.py
FuncionalTeste Codigo modular /translations/: en.json  es.json  fr.json  pt-BR.json
update_opencore/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README_PYTHON.md  RunUpdateOpenCore.command  backup.py  cleanup.py  config.py  dependencies.py  downloads.py  drivers.py  efi.py  logger.py  main.py  pyproject.toml  test_efi2.py  update_translations_2.py  update_translations_3.py
update_opencore/tests/: __init__.py  test_logger.py
update_opencore/translations/: en.json  es.json  fr.json  pt-BR.json
update_opencore/update_opencore/: dependencies.py  downloads.py  main.py  validate.py
update_opencore/update_opencore/translations/: en.json  es.json
