[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "update-opencore"
version = "1.0.0"
description = "Ferramenta para atualização automática do OpenCore no macOS"
authors = [
    {name = "Henrique", email = "henrique@example.com"}
]
readme = "../README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
]

[project.scripts]
update-opencore = "main:main"

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
